--- a/questions.html
+++ b/questions.html
@@ -1,26 +1,250 @@
 {
     "central": [
         {
-            "question": "Quelle est la largeur maximale autorisée d'un terrain de football international ?",
-            "options": ["68 m", "75 m", "90 m", "100 m"],
-            "answer": "68 m",
-            "theme": "Loi 1 - Terrain",
-            "difficulty": "medium",
-            "explanation": "Pour les matchs internationaux, la largeur maximale est de 68 mètres."
+            "question": "Quand accorde-t-on un coup de pied de but ?",
+            "options": [
+                "Quand le ballon franchit entièrement la ligne de but, dernière touche par un attaquant, sans but marqué",
+                "Quand le gardien réclame",
+                "Quand un défenseur dégage volontairement"
+            ],
+            "answer": "Quand le ballon franchit entièrement la ligne de but, dernière touche par un attaquant, sans but marqué",
+            "theme": "Loi 16 - Coup de pied de but",
+            "difficulty": "easy",
+            "explanation": "Un coup de pied de but est accordé lorsque le ballon, touché en dernier par un attaquant, franchit entièrement la ligne de but."
         },
         {
-            "question": "Quelle est la longueur minimale d'un terrain pour un match international ?",
-            "options": ["90 m", "100 m", "105 m", "110 m"],
-            "answer": "105 m",
-            "theme": "Loi 1 - Terrain",
+            "question": "Le ballon est en jeu lors d'un coup de pied de but quand :",
+            "options": [
+                "Il franchit la ligne des 5,5 m",
+                "Il sort de la surface de réparation",
+                "Il est frappé et bouge clairement à l'intérieur de la surface"
+            ],
+            "answer": "Il est frappé et bouge clairement à l'intérieur de la surface",
+            "theme": "Loi 16 - Coup de pied de but",
+            "difficulty": "easy",
+            "explanation": "Depuis les modifications des lois, le ballon est en jeu dès qu'il est botté et a clairement bougé, même s'il reste dans la surface."
+        },
+        {
+            "question": "Qui peut exécuter un coup de pied de but ?",
+            "options": [
+                "Uniquement le gardien",
+                "N'importe quel joueur de l'équipe en défense"
+            ],
+            "answer": "N'importe quel joueur de l'équipe en défense",
+            "theme": "Loi 16 - Coup de pied de but",
+            "difficulty": "easy",
+            "explanation": "N'importe quel joueur de l'équipe qui défend peut exécuter le coup de pied de but."
+        },
+        {
+            "question": "Les adversaires doivent rester :",
+            "options": [
+                "À 5 m du ballon",
+                "Hors de la surface de réparation jusqu'à ce que le ballon soit en jeu",
+                "À 9,15 m"
+            ],
+            "answer": "Hors de la surface de réparation jusqu'à ce que le ballon soit en jeu",
+            "theme": "Loi 16 - Coup de pied de but",
+            "difficulty": "easy",
+            "explanation": "Les joueurs adverses doivent rester en dehors de la surface de réparation jusqu'à ce que le ballon soit en jeu."
+        },
+        {
+            "question": "Si un adversaire entre trop tôt dans la surface et récupère le ballon :",
+            "options": [
+                "Rien, on laisse jouer",
+                "On rejoue le coup de pied de but"
+            ],
+            "answer": "On rejoue le coup de pied de but",
+            "theme": "Loi 16 - Coup de pied de but",
             "difficulty": "medium",
-            "explanation": "Pour les matchs internationaux, la longueur minimale est de 105 mètres."
+            "explanation": "Si un adversaire entre dans la surface avant que le ballon soit en jeu et intercepte le ballon, le coup de pied de but doit être rejoué."
+        },
+        {
+            "question": "Un but peut être marqué directement sur un coup de pied de but contre :",
+            "options": [
+                "L'adversaire",
+                "Son propre camp (corner accordé)"
+            ],
+            "answer": "L'adversaire",
+            "theme": "Loi 16 - Coup de pied de but",
+            "difficulty": "easy",
+            "explanation": "Un but est valable s'il est marqué directement contre l'équipe adverse. Si le ballon entre dans le propre but du tireur, un corner est accordé."
+        },
+        {
+            "question": "Le ballon doit être placé :",
+            "options": [
+                "Dans la surface de réparation",
+                "Sur le point de penalty",
+                "N'importe où dans la surface de but (5,5 m)"
+            ],
+            "answer": "N'importe où dans la surface de but (5,5 m)",
+            "theme": "Loi 16 - Coup de pied de but",
+            "difficulty": "medium",
+            "explanation": "Le ballon doit être placé en un point quelconque de la surface de but pour l'exécution d'un coup de pied de but."
+        },
+        {
+            "question": "Un défenseur tire le coup de pied de but directement dans son propre but. Décision ?",
+            "options": [
+                "But contre son camp",
+                "Corner pour l'adversaire"
+            ],
+            "answer": "Corner pour l'adversaire",
+            "theme": "Loi 16 - Coup de pied de but",
+            "difficulty": "medium",
+            "explanation": "On ne peut pas marquer contre son camp directement sur une remise en jeu. Si le ballon entre dans le but du tireur, un corner est accordé à l'adversaire."
+        },
+        {
+            "question": "Un coup de pied de but est exécuté, un attaquant intercepte dans la surface avant que le ballon ne soit en jeu. Décision ?",
+            "options": [
+                "But valable",
+                "Rejouer le coup de pied de but"
+            ],
+            "answer": "Rejouer le coup de pied de but",
+            "theme": "Loi 16 - Coup de pied de but",
+            "difficulty": "hard",
+            "explanation": "Le ballon n'est pas encore en jeu. L'infraction de l'attaquant (entrer trop tôt) entraîne la répétition du coup de pied de but."
+        },
+        {
+            "question": "Quand accorde-t-on un corner ?",
+            "options": [
+                "Quand le ballon sort totalement par la ligne de but, dernier touché par un défenseur, sans but marqué",
+                "Quand le ballon sort par la ligne de touche",
+                "Quand l'arbitre le décide"
+            ],
+            "answer": "Quand le ballon sort totalement par la ligne de but, dernier touché par un défenseur, sans but marqué",
+            "theme": "Loi 17 - Corner",
+            "difficulty": "easy",
+            "explanation": "Un corner est accordé quand le ballon, touché en dernier par un défenseur, franchit entièrement la ligne de but."
+        },
+        {
+            "question": "Où doit être placé le ballon lors d'un corner ?",
+            "options": [
+                "Dans le quart de cercle de coin",
+                "À 1 m du poteau de corner",
+                "N'importe où sur la ligne de but"
+            ],
+            "answer": "Dans le quart de cercle de coin",
+            "theme": "Loi 17 - Corner",
+            "difficulty": "easy",
+            "explanation": "Le ballon doit être placé à l'intérieur de l'arc de cercle de coin le plus proche de l'endroit où le ballon est sorti."
+        },
+        {
+            "question": "Distance minimale des adversaires lors d'un corner :",
+            "options": [
+                "5 m",
+                "7 m",
+                "9,15 m"
+            ],
+            "answer": "9,15 m",
+            "theme": "Loi 17 - Corner",
+            "difficulty": "easy",
+            "explanation": "Tous les adversaires doivent se trouver à au moins 9,15 m de l'arc de cercle de coin jusqu'à ce que le ballon soit en jeu."
+        },
+        {
+            "question": "Un défenseur devance l'attaquant, le ballon touche accidentellement son bras collé au corps.",
+            "options": [
+                "Coup franc direct",
+                "Penalty",
+                "Pas de faute"
+            ],
+            "answer": "Pas de faute",
+            "theme": "Loi 12 - Fautes et incorrections",
+            "difficulty": "medium",
+            "explanation": "Si le bras est dans une position naturelle et collé au corps, il ne s'agit pas d'une faute de main sanctionnable."
+        },
+        {
+            "question": "Un remplaçant entre sur le terrain sans autorisation et stoppe une attaque.",
+            "options": [
+                "Coup franc direct à l'endroit de l'interférence",
+                "Coup franc indirect à l'endroit du ballon",
+                "Balle à terre"
+            ],
+            "answer": "Coup franc direct à l'endroit de l'interférence",
+            "theme": "Loi 12 - Fautes et incorrections",
+            "difficulty": "hard",
+            "explanation": "L'entrée non autorisée d'un remplaçant qui interfère avec le jeu est sanctionnée par un coup franc direct."
+        },
+        {
+            "question": "Un joueur mord un adversaire dans la surface de réparation.",
+            "options": [
+                "Coup franc indirect",
+                "Expulsion + penalty"
+            ],
+            "answer": "Expulsion + penalty",
+            "theme": "Loi 12 - Fautes et incorrections",
+            "difficulty": "medium",
+            "explanation": "Mordre un adversaire est considéré comme un acte de brutalité, sanctionné par une expulsion et un coup de pied de réparation (penalty) si c'est dans la surface."
+        },
+        {
+            "question": "Un coup franc indirect est tiré directement dans le but adverse.",
+            "options": [
+                "But valable",
+                "Coup de pied de coin",
+                "Coup de but (renvoi de but)"
+            ],
+            "answer": "Coup de but (renvoi de but)",
+            "theme": "Loi 13 - Coups francs",
+            "difficulty": "medium",
+            "explanation": "Un but ne peut être marqué sur un coup franc indirect que si le ballon a été touché par un autre joueur avant d'entrer dans le but. Sinon, le jeu reprend par un coup de but."
+        },
+        {
+            "question": "Un coup franc direct est tiré dans le propre but.",
+            "options": [
+                "But valable",
+                "Coup de pied de coin pour l'adversaire",
+                "Coup de but"
+            ],
+            "answer": "Coup de pied de coin pour l'adversaire",
+            "theme": "Loi 13 - Coups francs",
+            "difficulty": "medium",
+            "explanation": "On ne peut pas marquer contre son camp directement sur un coup franc. Le jeu reprend par un corner pour l'équipe adverse."
+        },
+        {
+            "question": "Quand le ballon est-il considéré comme « hors du jeu » ?",
+            "options": [
+                "Quand il franchit totalement les lignes de but ou de touche, au sol ou en l'air",
+                "Quand la moitié du ballon sort",
+                "Quand il est touché par un spectateur"
+            ],
+            "answer": "Quand il franchit totalement les lignes de but ou de touche, au sol ou en l'air",
+            "theme": "Loi 9 - Ballon en jeu",
+            "difficulty": "easy",
+            "explanation": "Le ballon est hors du jeu uniquement lorsqu'il a entièrement franchi la ligne de but ou la ligne de touche, que ce soit à terre ou en l'air."
+        },
+        {
+            "question": "Si le ballon heurte l'arbitre et : (1) conduit directement à un but OU (2) change de possession OU (3) crée une attaque dangereuse... alors :",
+            "options": [
+                "On arrête et balle à terre",
+                "On laisse jouer",
+                "Coup franc indirect"
+            ],
+            "answer": "On arrête et balle à terre",
+            "theme": "Loi 9 - Ballon en jeu",
+            "difficulty": "hard",
+            "explanation": "Si le ballon touche l'arbitre et qu'une de ces trois situations se produit, le jeu doit être arrêté et repris par une balle à terre."
+        },
+        {
+            "question": "Si le ballon touche une personne extérieure (spectateur, remplaçant) :",
+            "options": [
+                "Le jeu s'arrête si interférence",
+                "Le jeu continue si pas d'influence",
+                "L'arbitre décide",
+                "Toutes ces réponses"
+            ],
+            "answer": "Toutes ces réponses",
+            "theme": "Loi 9 - Ballon en jeu",
+            "difficulty": "medium",
+            "explanation": "L'arbitre doit juger de l'impact de l'interférence. Le jeu est arrêté si une personne non autorisée influe sur le jeu, sinon il peut continuer."
         }
     ],
     "assistant": [
         {
             "question": "L'arbitre assistant doit lever son drapeau pour signaler un hors-jeu :",
-            "options": ["Dès que le joueur est en position de hors-jeu", "Quand le joueur touche le ballon", "Quand il interfère avec le jeu", "Jamais"],
+            "options": [
+                "Dès que le joueur est en position de hors-jeu",
+                "Quand le joueur touche le ballon",
+                "Quand il interfère avec le jeu",
+                "Jamais"
+            ],
             "answer": "Quand il interfère avec le jeu",
             "theme": "Collaboration",
             "difficulty": "medium",
@@ -28,11 +252,55 @@
         },
         {
             "question": "En cas de désaccord avec l'arbitre central, l'assistant doit :",
-            "options": ["Insister sur sa décision", "Se soumettre à la décision de l'arbitre", "Demander l'avis du 4ème arbitre", "Arrêter le jeu"],
+            "options": [
+                "Insister sur sa décision",
+                "Se soumettre à la décision de l'arbitre",
+                "Demander l'avis du 4ème arbitre",
+                "Arrêter le jeu"
+            ],
             "answer": "Se soumettre à la décision de l'arbitre",
             "theme": "Collaboration",
             "difficulty": "easy",
             "explanation": "L'arbitre central prend toujours la décision finale, même après consultation de ses assistants."
+        },
+        {
+            "question": "L'arbitre assistant peut-il signaler une faute grave que l'arbitre n'a pas vue ?",
+            "options": [
+                "Oui, toujours",
+                "Non, jamais",
+                "Seulement les cartons rouges",
+                "Seulement dans sa zone"
+            ],
+            "answer": "Oui, toujours",
+            "theme": "Collaboration",
+            "difficulty": "medium",
+            "explanation": "L'assistant peut et doit signaler toute faute grave, comportement violent ou incident que l'arbitre n'a pas vu."
+        },
+        {
+            "question": "Pour signaler une faute, l'arbitre assistant doit :",
+            "options": [
+                "Lever le drapeau",
+                "Attendre le contact visuel",
+                "Crier",
+                "Utiliser le bip"
+            ],
+            "answer": "Attendre le contact visuel",
+            "theme": "Collaboration",
+            "difficulty": "hard",
+            "explanation": "L'assistant doit d'abord établir un contact visuel avec l'arbitre avant de faire son signal."
+        },
+        {
+            "question": "L'arbitre assistant doit se placer :",
+            "options": [
+                "Toujours sur la ligne de touche",
+                "À hauteur du dernier défenseur",
+                "À hauteur de l'avant-dernier défenseur",
+                "Au centre du terrain"
+            ],
+            "answer": "À hauteur de l'avant-dernier défenseur",
+            "theme": "Collaboration",
+            "difficulty": "medium",
+            "explanation": "L'assistant se positionne à hauteur de l'avant-dernier défenseur pour juger correctement les hors-jeu."
         }
     ]
 }
