fix: Corriger le système de questions pour rendre l'app fonctionnelle
- Créer questions.js avec structure organisée par rôle d'arbitre
- 22 questions pour arbitres centraux (Lois 1-8 du jeu)
- 12 questions spécialisées pour arbitres assistants (hors-jeu, touches)
- Ajouter thèmes, niveaux de difficulté et explications détaillées
- Corriger quiz.html pour référencer le nouveau fichier questions.js
- Ajouter .gitignore pour fichiers de configuration serveur

Résout le problème critique empêchant le fonctionnement de l'application

--- a/quiz.html
+++ b/quiz.html
@@ -92,6 +92,7 @@
         ATKAN ACADEMY - Tous droits réservés 2025 ® 
     </footer>
 
+    <script src="questions.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
